# FakeNews-Insight

./: .env.example  .gitattributes  .gitignore  README.md  diagramaArquitectura.drawio  docker-compose.yml  wireframe.drawio  wrangler.jsonc
browser-extension/: README.md  manifest.json
doc/: diagramaclasesTFG.drawio
docs/: ARCHITECTURE.md  DEPLOY.md  Guia_Flujo_Proyecto.md  HANDOFF_ALPHA.md
fakenews-backend/: .dockerignore  .env.example  Dockerfile  billing.py  csv_contrast.py  fever_runtime.py  main.py  requirements.txt  url_contrast.py  verification_queue.py  worker.py
fakenews-frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  INSTRUCCIONES_TFG.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
models/: modelo_fakenews_svm.pkl  vectorizador_tfidf.pkl
research-stats/: .gitignore  README.md  pyproject.toml  requirements.txt
research-stats/reports/tables/: deberta_v1_evaluation.json
research-stats/research_stats/: __init__.py  labels.py
research-stats/research_stats/baseline/: __init__.py  train_tfidf_lr.py
research-stats/research_stats/data/: __init__.py  download_fever.py  preprocess.py
research-stats/research_stats/evaluation/: __init__.py  calibration.py  metrics.py  predict.py  run_evaluation.py  statistical_tests.py
research-stats/research_stats/export/: __init__.py  export_to_onnx.py
research-stats/research_stats/transformer/: __init__.py  config.yaml  train_deberta.py
research-stats/tests/: __init__.py  test_evaluation.py
tfg-estadistica/: .gitignore  README.md
(+232 files in other folders)
